--- a/public/index.html
+++ b/public/index.html
@@ -25,5 +25,9 @@
     <script src="assets/js/templatemo.js"></script>
     <script src="assets/js/custom.js"></script>
     <script src="three.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/00bf28cf60.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
